
Installation Assistant v1.2.1
- Only create dummy index.html files in subdirectories we created.
- Clear cache after step 9

CmsJobManager
- New core module to handle queued asynchronous tasks.

Content Manager
- Minor tweak to bulk delete pages.
- Minor fix to the active tab when changing a template or design.
- Now listen to the 'default parent page' user preference.

DesignManager
- Move the designs tab of the main interface into third position.
- Implement sorting in edit design.
- Remove option menus (for now) from templates, stylesheets, and designs tab.
- Modify the template list functionality in edit-design to allow using keyboard control.   space or + to select an item on the left, and right arrow to move
- Modify the edit-design functionality to allow clicking on an attached template or stylesheet to edit it.
- Generic templates now display a usage string.
- When creating a new template, associate the new template with the default design.
- Add reset buttons to the filter forms.
- No longer check for default content block in a template.

News v2.50.5
- Minor fix to add category.
- Removes GetNotificationOutput method.
- adda a task that runs at least every 15 minutes to detect draft articles... create an alert for this.
- add an option to never create alerts about draft News articles.

FileManager v1.6.2
- Move settings to it's own menu item under site-admin
- Fix minor problem with moving a directory.
- Adds OnFileDeleted event.

Phar Installer v1.2
- A database account password is now required
- Upgrade routine now asks for, and tests database credentials
- Upgrade routine now rewrites the config.php file (but keeps a backup)
- Set a few more preferences to reasonable defaults on install.. specifically related to site cleanup and performance.

Search
- Convert to store all data using the InnoDB engine
- Use transactions for the addwords and deletewords stuff for performance.
- Fix problem with query and record expiry.